Update CSS to fix image/header overlap

--- a/_includes/css/poole.css
+++ b/_includes/css/poole.css
@@ -86,6 +86,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.25;
   color: #313131;
   text-rendering: optimizeLegibility;
+  clear: left;
 }
 h1 {
   font-size: 2rem;
